--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ out/production/DPS22/FibonacciHeap$NodeCDLL.class
 out/production/DPS22/FibonacciHeap.class
 out/production/DPS22/HeapPrinter.class
 out/production/DPS22/Test.class
+*.class
